# bio_condensates

./: CMakeLists.txt  README.md  bio_condensates.pc.in  config.h.cmake  dockerfile  dune.module  helper.ipynb  pyproject.toml
.devcontainer/: devcontainer.env  devcontainer.json  dockerfile
.devcontainer/starting_scripts/: setup_dune.sh  setup_hatch.sh
amdis/: CMakeLists.txt
amdis/bio_condensates/: Bio_condensates.hpp  CMakeLists.txt
macro/: macro.square.2d  periodic.square.2d
scripts/: rebuild_and_run.sh  run.sh
src/: CMakeLists.txt  cahn_hilliard.cc  ch_active_b_plus.cc  ch_curve.cc
